--- a/src/main/resources/templates/auth/login_form.html
+++ b/src/main/resources/templates/auth/login_form.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"></meta>
     <title>Login</title>
+
+    <script type="text/javascript" th:inline="javascript" th:if="${session['SPRING_SECURITY_LAST_EXCEPTION']}">
+        /*<![CDATA[*/
+        window.location="/adminfunc/AUTH/login-fail.html";
+        /*]]>*/
+    </script>
 
     <script src="/adminfunc/js/lib/jquery-3.3.1.min.js"></script>
     <script src="/adminfunc/js/lib/lodash.min.js"></script>
@@ -50,12 +56,6 @@
 </head>
 <body>
 <div>
-
-    <!--<div th:if="${userDTO}">-->
-    <!--<h3 th:text="${userDTO.loginId}" ></h3><br />-->
-    <!--<h3 th:text="${userDTO.password}"></h3><br />-->
-    <!--</div>-->
-
     <div class="flex-container">
         <div class="flex-item-1 header-item-left">
             <span>e-Services-2</span>
@@ -119,7 +119,6 @@
 
                 </div>
             </div>
-
         </form>
     </div>
 </div>
