--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" >
     <head>
         <title>Layout page</title>
 
@@ -41,47 +41,17 @@
 
                 <div class="grid-container" style="border-radius: 20px 20px 0px 0px; ">
                     <div class="main-menu">
-                        <!--<p>this is header</p>-->
-                        <!--<div >-->
-                        <!--<h3>header1</h3>-->
-
-                        <!--<h3 th:text="${menuObj}"></h3>-->
-
-                        <!--<span>-->
-                            <!--<input type="radio" id="main-tab-" th:attrappend="id=123" name="main-tabs" checked="checked"  />-->
-                            <!--<label for="main-tab-" th:attrappend="for=123" style="" url="${item.url}"-->
-                                   <!--th:text="abc" th:onclick="'navigatePage(\'111\');'"  ></label>-->
-                        <!--</span>-->
-                        <!--<span>-->
-                            <!--<input type="radio" id="main-tab-" th:attrappend="id=124" name="main-tabs"   />-->
-                            <!--<label for="main-tab-" th:attrappend="for=124" style="" url="${item.url}"-->
-                                   <!--th:text="def" th:onclick="'myFunc();'"  ></label>-->
-                        <!--</span>-->
                         <span style="margin-left: 30px;"></span>
 
                         <span th:each="item, idx : ${ROOT.childern}">
-                    <!--<h4 th:text="${item.label}"></h4>-->
                             <input type="radio" id="main-tab-" th:attrappend="id=${idx.index + 1}" name="main-tabs" checked="checked"  />
                             <label for="main-tab-" th:attrappend="for=${idx.index + 1}" style="" url="${item.url}"
                                    th:text="${item.label}" th:onclick="'navigatePage('+${idx.index}+');'"  ></label>
                         </span>
-                        <!--</div>-->
-
                     </div>
                 </div>
 
-
-                <div class="flex-container grid-nav-container">
-                    <div class="flex-item-1 nav-title-left">
-                            <span style=" width: '100%'">e-Services-2 >
-                                <span id="eServices2SubCat">Enquiry</span> >
-                                <span id="eServices2Func">Application Fee Enquiry</span>
-                            </span>
-                    </div>
-                    <div class="flex-item-1 nav-title-right">
-                        <span style="width: 100%;">AFE0001</span>
-                    </div>
-                </div>
+                <div th:replace="fragments/navigation::nav(${ROOT})"></div>
 
             </div>
 
