--- a/src/main/resources/templates/eServices2/ImportantAnnouncement/important-announcement-free-text-edit-success.html
+++ b/src/main/resources/templates/eServices2/ImportantAnnouncement/important-announcement-free-text-edit-success.html
@@ -54,9 +54,8 @@
                             <span th:text="${#messages.msg('umps.adminfunc.importantAnnouncement.engContent')}"></span>
                         </div>
                         <div class="success-item-right">
-                            <span>
-Important Notice: Yuen Long Office will be relocated to the following address on 26 February 2018: 1/F, Yuen Long Government Offices, 2 Kiu Lok Square, Yuen Long, New Territories
-The existing office at Manhattan Plaza will be closed and cease providing services on the same day. Services provided will not be affected during the relocation period. </span>
+                            <p>Important Notice: Yuen Long Office will be relocated to the following address on 26 February 2018: 1/F, Yuen Long Government Offices, 2 Kiu Lok Square, Yuen Long, New Territories
+                                The existing office at Manhattan Plaza will be closed and cease providing services on the same day. Services provided will not be affected during the relocation period. </p>
                         </div>
                     </div>
                     <div class="RowSeparatorThin"></div>
@@ -65,8 +64,8 @@ The existing office at Manhattan Plaza will be closed and cease providing servic
                             <span th:text="${#messages.msg('umps.adminfunc.importantAnnouncement.tradChinContent')}"></span>
                         </div>
                         <div class="success-item-right">
-                            <span>元朗辦事處將於二零一八年二月二十六日遷往以下地址 ﹕ 新界元朗橋樂坊2 號元朗政府合署1樓
-現時位於富逹廣場的辦事處將於同日起關閉及停止服務。 在搬遷期間，辦事處所提供的服務將不受影響。</span>
+                            <p>元朗辦事處將於二零一八年二月二十六日遷往以下地址 ﹕ 新界元朗橋樂坊2 號元朗政府合署1樓
+                                現時位於富逹廣場的辦事處將於同日起關閉及停止服務。 在搬遷期間，辦事處所提供的服務將不受影響。</p>
                         </div>
                     </div>
                     <div class="RowSeparatorThin"></div>
@@ -75,8 +74,8 @@ The existing office at Manhattan Plaza will be closed and cease providing servic
                             <span th:text="${#messages.msg('umps.adminfunc.importantAnnouncement.simpChinContent')}"></span>
                         </div>
                         <div class="success-item-right">
-                            <span>元朗办事处将于二零一八年二月二十六日迁往以下地址： 新界元朗桥乐坊2号元朗政府合署1楼
-现时位于富逹广场的办事处将于同日起关闭及停止服务。 在搬迁期间，办事处所提供的服务将不受影响。</span>
+                            <p>元朗办事处将于二零一八年二月二十六日迁往以下地址： 新界元朗桥乐坊2号元朗政府合署1楼
+                                现时位于富逹广场的办事处将于同日起关闭及停止服务。 在搬迁期间，办事处所提供的服务将不受影响。</p>
                         </div>
                     </div>
                     <div class="RowSeparatorThin"></div>
