--- a/src/main/webapp/css/important-announcement.css
+++ b/src/main/webapp/css/important-announcement.css
@@ -20,3 +20,42 @@
 .annt-item-left > span {
     font-weight: bold;
 }
+
+.annt-header {
+    border-radius: 10px 10px 0 0;
+    width: 300px;
+    padding-left: 20px;
+}
+
+.annt-date-container {
+    min-width: 200px;
+}
+
+.annt-date-content {
+    float: left;
+    padding-left: 5px;
+}
+
+.annt-date-value {
+    text-align: center;
+}
+
+.annt-date-year {
+    width: 50px;
+}
+
+.annt-date-non-year {
+    width: 30px;
+}
+
+.annt-date-text {
+    text-align: center;
+}
+
+.annt-note {
+    color: red;
+}
+
+.annt-appl {
+    width: 100%;
+}
